# tdd-agent-antigravity-23112025

./: .gitignore  AGENTS.md  Cargo.toml  PERPLEXITY_TESTING.md  README.md  TODO.md  initial-requirements.md
crates/tdd-agents/: Cargo.toml
crates/tdd-agents/src/: agent.rs  lib.rs  prompts.rs
crates/tdd-cli/: Cargo.toml
crates/tdd-cli/src/: config.rs  main.rs
crates/tdd-core/: Cargo.toml
crates/tdd-core/src/: lib.rs  orchestrator.rs
crates/tdd-core/tests/: orchestrator_test.rs
crates/tdd-exec/: Cargo.toml
crates/tdd-exec/src/: git.rs  lib.rs  runner.rs
crates/tdd-fixtures/: Cargo.toml
crates/tdd-fixtures/src/: lib.rs
crates/tdd-llm/: Cargo.toml
crates/tdd-llm/src/: lib.rs
katas/: battleships-kata.md  bowling.md  fizzbuzz.md  goose-game.md  mars-rover-kata.md  string-calculator.md
