[package]
name = "tdd-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
tdd-core = { path = "../tdd-core" }
tdd-llm = { path = "../tdd-llm" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs"] }
