[package]
name = "tdd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs"] }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
